# llm-uq-eval-harness

./: .gitignore  README.md  pyproject.toml
configs/: custom_example.yaml  gsm8k_example.yaml  triviaqa_example.yaml
docs/: gsm8k_report.html  triviaqa_report.html
llm_uq/: cli.py  config.py  engine.py  report.py
llm_uq/datasets/: loader.py  scoring.py
llm_uq/metrics/: base.py  builtin.py  registry.py
