[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-uq"
version = "0.1.0"
description = "Token-level uncertainty quantification for HuggingFace causal LMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.29",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "sentence-transformers>=2.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Install for GPU inference: pip install "llm-uq[gpu]"
gpu = ["bitsandbytes>=0.43"]

[project.scripts]
llm-uq = "llm_uq.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_uq*"]
